--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,13 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  google_ml_kit: ^0.16.2
+  google_mlkit_commons: ^0.5.0
+  google_mlkit_barcode_scanning: ^0.9.0
+  camera: ^0.10.5+2
+  image_picker: ^1.0.2
+  path: ^1.8.3
+  path_provider: ^2.1.0
 
 dev_dependencies:
   flutter_test:
