--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,9 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  google_ml_kit: ^0.16.2
   google_mlkit_commons: ^0.5.0
   google_mlkit_barcode_scanning: ^0.9.0
+  google_mlkit_face_detection: ^0.8.0
   camera: ^0.10.5+2
   image_picker: ^1.0.2
   path: ^1.8.3
