--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   google_mlkit_commons: ^0.5.0
   google_mlkit_barcode_scanning: ^0.9.0
   google_mlkit_face_detection: ^0.8.0
+  google_mlkit_face_mesh_detection: ^0.0.1
   camera: ^0.10.5+2
   image_picker: ^1.0.2
   path: ^1.8.3
