--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   google_mlkit_barcode_scanning: ^0.9.0
   google_mlkit_face_detection: ^0.8.0
   google_mlkit_face_mesh_detection: ^0.0.1
+  google_mlkit_image_labeling: ^0.9.0
   camera: ^0.10.5+2
   image_picker: ^1.0.2
   path: ^1.8.3
@@ -29,9 +30,9 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/ml/
 
   # fonts:
   #   - family: Schyler
