--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   google_mlkit_face_mesh_detection: ^0.0.1
   google_mlkit_image_labeling: ^0.9.0
   google_mlkit_object_detection: ^0.10.0
+  google_mlkit_text_recognition: ^0.10.0
   camera: ^0.10.5+2
   image_picker: ^1.0.2
   path: ^1.8.3
