--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   google_mlkit_object_detection: ^0.10.0
   google_mlkit_text_recognition: ^0.10.0
   google_mlkit_digital_ink_recognition: ^0.9.0
+  google_mlkit_pose_detection: ^0.9.0
   camera: ^0.10.5+2
   image_picker: ^1.0.2
   path: ^1.8.3
