--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   google_mlkit_digital_ink_recognition: ^0.9.0
   google_mlkit_pose_detection: ^0.9.0
   google_mlkit_selfie_segmentation: ^0.5.0
+  google_mlkit_language_id: ^0.8.0
   camera: ^0.10.5+2
   image_picker: ^1.0.2
   path: ^1.8.3
