google mlkit - smart reply

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   google_mlkit_selfie_segmentation: ^0.5.0
   google_mlkit_language_id: ^0.8.0
   google_mlkit_translation: ^0.8.0
+  google_mlkit_smart_reply: ^0.8.0
   camera: ^0.10.5+2
   image_picker: ^1.0.2
   path: ^1.8.3
