--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   google_mlkit_language_id: ^0.8.0
   google_mlkit_translation: ^0.8.0
   google_mlkit_smart_reply: ^0.8.0
+  google_mlkit_entity_extraction: ^0.10.0
   camera: ^0.10.5+2
   image_picker: ^1.0.2
   path: ^1.8.3
