--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   image_picker: ^1.0.2
   path: ^1.8.3
   path_provider: ^2.1.0
+  firebase_core: ^2.15.0
 
 dev_dependencies:
   flutter_test:
